@@ -178,6 +178,10 @@ the description for ".xflag" below.
 	to "\n[ury]". All values are in points. If an error occurs, the
 	registers are set to zero.
 
+.pso shell-command
+	executes "shell-command" and reads its standard output as text
+	input.
+
 .recursionlimit n
 	sets the maximum stack depth for recursive invocations of macros to
 	n. If n is zero, the stack depth is unlimited. The default limit is
@@ -397,4 +401,4 @@ x X Track a
 	request.
 
 
-Gunnar Ritter                                                   11/29/05
+Gunnar Ritter                                                   12/4/05
